--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -1,20 +1,20 @@
 # LRP METHODS FOR PACIFIC SALMON {#est-methods}
 
-## Estimation of CU Status {#cu-est-methods}
+## ESTIMATION OF CU STATUS {#cu-est-methods}
 
 
-To be consistent with the multidimensional approach to WSP status assessments described in @holtIndicatorsStatusBenchmarks2009a, we recommend that CU-level status consider multiple metrics, either integrated through expert-driven processes or the through the Pacific Salmon Status Scanner (Pestal et al. in prep.), where possible <!--CW: in theory, shouldn't the PSSS also be reviewed by experts? -->.  This approach allows for the assessment of status across a wide range of data availability; when data for a single metric is not available other metrics can be used to inform status. Although the Rapid Multidimensional Scanning Tool can provide provisional assessments under data limitations, uncertainties resulting from data limitations are not currently integrated into the provision of recommended status. Ongoing improvements to the tool will consider those uncertainties.  
+To be consistent with the multidimensional approach to WSP status assessments described in @holtIndicatorsStatusBenchmarks2009a, we recommend that CU-level status consider multiple metrics, either integrated through expert-driven processes or the through the Pacific Salmon Status Scanner (Pestal et al. in prep.), where possible <!--CW: in theory, shouldn't the PSSS also be reviewed by experts? -->.  This approach allows for the assessment of status across a wide range of data availability; when data for a single metric is not available other metrics can be used to inform status. Although the Pacific Salmon Status Scanner can provide provisional assessments under data limitations, uncertainties resulting from data limitations are not currently integrated into the provision of recommended status. Ongoing improvements to the tool will consider those uncertainties.  
 
 
 One metric within the Pacific Salmon Status Scanner is spawner abundances relative to <!--CH: "estimated" to distinguish for SoS's absolute or non-estimated benchmarks--> abundance-based benchmarks. Various types of benchmarks have been identified along this metric to account for differences in data types, quantities and qualities among CUs. For data-rich CUs where spawner-recruitment relationships can be reliably estimated, the abundance resulting in recovery to S~MSY~ in one salmon generation under equilibrium conditions, S~gen~ is recommended by @holtEvaluationBenchmarksConservation2009. Where recruitment time-series are not available and productivity is assumed to be moderate or high and harvest rates moderate or low, specified percentiles of observed spawner time-series, (e.g., 25th) can be used as a proxy for spawner-recruitment benchmarks [@holtEvaluatingBenchmarksBiological2018]. For Chinook and Coho Salmon where production is often limited by the quantity of freshwater habitat, equilibrium spawner abundances can be predicted from habitat characteristics to inform abundance-based benchmarks [@nobleHabitatbasedEscapementBenchmarks2015; @parkenHabitatbasedMethodsEstimate2006]. For example, @parkenHabitatbasedMethodsEstimate2006 use the relationship between watershed area and spawner-recruitment based reference points in a meta-analysis of Chinook Salmon stocks across the Pacific region to predict reference points for Chinook stocks without recruitment data.
 
 In addition, metrics on the distribution of spawning within a CU can be considered in WSP assessments [@peacockReviewMetricsDistribution2010a; peacockMetricsSamplingDesigns2012]. Although benchmarks along metrics of distribution have not been identified for WSP assessment, for Interior Fraser River Coho Salmon, short and long-term recovery targets along a metric of spawning distribution among sub-populations was identified [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006], and forms a basis for management of this SMU.
 
-The metrics and benchmarks described above are a subset of those considered within Pacific Salmon Status Scanner (which also include short and long-term trends over time, and abundances relative to absolute conservation threshold) <!--CW: Although the PSSS does not include the distributional metric -->. For the purposes of LRP development, individual metrics on spawner abundances are applied both within the Rapid Multidimensional Scanning Tool and independently of the Tool to demonstrate the consistency (and occasional inconsistency) with status on multidimensional vs single-metric approaches. When only a single metric is applied to derive status, there is a risk of providing a misleading assessment if overall status is informed from additional metrics which diverge from abundance-based metrics but are not considered.
+The metrics and benchmarks described above are a subset of those considered within Pacific Salmon Status Scanner (which also include short and long-term trends over time, and abundances relative to absolute conservation threshold) <!--CW: Although the PSSS does not include the distributional metric -->. For the purposes of LRP development, individual metrics on spawner abundances are applied both within the Pacific Salmon Status Scanner and independently of the Tool to demonstrate the consistency (and occasional inconsistency) with status on multidimensional vs single-metric approaches. When only a single metric is applied to derive status, there is a risk of providing a misleading assessment if overall status is informed from additional metrics which diverge from abundance-based metrics but are not considered.
 
 When assessing CU status relative to abundance-based lower benchmarks, we use generational mean spawner abundances as a basis for determining whether each CU is above or below its lower benchmark. Generational smoothing integrates status over cohorts within a generation, which are tend to exhibit relatively independent dynamics. This approach reduces noise in annual CU status determination due to annual fluctuations in CU abundances from any single cohort. It also makes our determination of CU status consistent with the approach taken for abundance-based benchmarks in WSP assessments and the Pacific Salmon Status Scanner.
 
-## Estimation of LRPs: Aggregating CU benchmarks and status to the SMU-level
+## ESTIMATION OF LRPS: AGGREGATING CU BENCHMARKS AND STATUS TO SMUS
 
 <!--CH suggest removing:
 ### Report status relative to benchmarks for individual CUs
@@ -25,7 +25,7 @@ When assessing CU status relative to abundance-based lower benchmarks, we use ge
 
 Proportion-based LRPs are calculated from the proportion of CUs within an SMU that are assessed as being above the red WSP status zone. To be consistent with the intent of the WSP of preserving biodiversity at the CU-level, we identify an LRP at 100% of CUs having status estimates above red (i.e., either amber or green). When any individual CU falls into the red zone, then the LRP is considered breached. See Section \@ref(guidelines) for a step-wise approach for identifying LRPs that further considers data limitations when identifying the proportion of CUs above the red zone. CU statuses are derived using the approaches described in Section \@ref(cu-est-methods), and are submitted to peer review, as described in Section \@ref(guidelines).
 
-Proportion-based LRPs are aligned with Principle 1 to the extent that serious harm is indicated by status of any one CU being in the red zone under the WSP. These LRPs are also based on the best available information by incorporating multiple dimensions of status through formal, peer reviewed WSP status assessments or the Rapid Multidimensional Scanning Tool with peer review. By using status derived from the annual implementation of the Rapid Multidimensional Scanning Tool, relevant and timely information is used to inform status is up to date, in a way that is transparent and open. Proportion-based LRPs are operational (Principle 3) as they are simple to calculate and communicate as a proportion of CU statuses. However, they are not easily incorporated into harvest based management, e.g., harvest control rules at the aggregate level. Reliability of estimation (Principle 4) depends in part on the underlying data and is CU- and SMU-dependent. Uncertainties are not currently propagated from CU level benchmarks to CU statuses, LRPs and SMU statuses.  Proportion-based LRPs are well aligned with Principle 7, being derived directly from WSP metrics of status for CUs.
+Proportion-based LRPs are aligned with Principle 1 to the extent that serious harm is indicated by status of any one CU being in the red zone under the WSP. These LRPs are also based on the best available information by incorporating multiple dimensions of status through formal, peer reviewed WSP status assessments or the Pacific Salmon Status Scanner with peer review. By using status derived from the annual implementation of the Salmon Scanner, relevant and timely information is used to inform status is up to date, in a way that is transparent and open. Proportion-based LRPs are operational (Principle 3) as they are simple to calculate and communicate as a proportion of CU statuses. However, they are not easily incorporated into harvest based management, e.g., harvest control rules at the aggregate level. Reliability of estimation (Principle 4) depends in part on the underlying data and is CU- and SMU-dependent. Uncertainties are not currently propagated from CU level benchmarks to CU statuses, LRPs and SMU statuses.  Proportion-based LRPs are well aligned with Principle 7, being derived directly from WSP metrics of status for CUs.
 
 A further advantage of this method is that is easily scalable to other spatial scales under which Pacific salmon is managed. For example, CUs can be assessed individually when threats and responses are local in nature and can be aggregated at larger scales and across species when threats and responses are cross-cutting (e.g., as seen for Big Bar landslide of 2019). 
 
@@ -65,14 +65,14 @@ knitr::include_graphics("figure/methods-Example-LogisticLRP.png")
 We recommend evaluating the fit of the logistic regression prior to the development of LRPs to identify its reliability in determining serious harm to component CUs. Diagnostics commonly used for logistic regression of Bernoulli distributed data are provided in Holt et al. (in review), for example, evaluating the assumptions that the aggregate abundances is linearly related to log-odds of all CUs being above their lower benchmarks, observations are independent, and there are no influential outliers. In addition, the statistical significance of the predictor variable, aggregate abundances and the goodness-of-fit of the logistic model can inform its reliability for determining LRPs. Furthermore, the classification accuracy of LRPs developed from a logistic regression can be evaluated on the observed data using the performance metric, hit ratio. This ratio represents the proportion of successful classifications above or below the logistic regression-derived LRP, relative to the total number classifications or years.  Out-of-sample cross-validation methods can be applied so that model-based LRPs do not include the observed data used for evaluation in this performance metric.
 
 
-We applied a single metric on spawner abundances to approximate CU-status because multidimensional approaches for WSP assessments include  generational smoothing of spawner abundance and metrics of temporal trends, which introduces autocorrelation in observed CU statuses, violating an assumption of the logistic regression model. Future research could consider logistic regression-based models that include autocorrelated residuals to develop LRPs based on CU-statuses provided from the Rapid Multidimensional Scanning Tool.
+We applied a single metric on spawner abundances to approximate CU-status because multidimensional approaches for WSP assessments include  generational smoothing of spawner abundance and metrics of temporal trends, which introduces autocorrelation in observed CU statuses, violating an assumption of the logistic regression model. Future research could consider logistic regression-based models that include autocorrelated residuals to develop LRPs based on CU-statuses provided from the Pacific Salmon Status Scanner.
 
 Using a single-metric proxy for CU status also allowed us to use a statistically integrated estimation approach, where CU-level stock-recruitment models and associated CU-level benchmarks were estimated in the same model as the logistic regression and LRP derivation. In this way, the uncertainty from CU-level assessments can be propagated to the development of the LRP and the assessment against that LRP. The model provides the probability of being below the LRP in the current year that explicitly accounts for uncertainty in CU-level assessments against their lower benchmarks.  
 
 
 Furthermore, structural uncertainty in underlying assumptions about the basis of CU-level benchmarks, such as spawner-recruitment relationship can be addressed in at least three ways. First, the weight of evidence for various assumptions can be identified to identify the assumptions with the most support for underlying CU dynamics and CU status, which is then used for LRP development. Second, various assumptions can be provided as sensitivity analyses demonstrating the impact of assumptions about CU dynamics on LRPs estimates and current status, if possible with a narrative describing which is considered a base case. Third, LRPs can be averaged by, for example, combining posterior probability estimates. When averaging, LRPs can be weighted according to the strength of evidence for each hypothesis based on statistical criteria (e.g., AIC), retrospective performance, or expert opinion [@rossiInferringFisheriesStock2019; @jardimOperationalizingEnsembleModels2021].
 
-Logistic regression-based LRPs are aligned with Principle 1 to the extent that serious harm is indicated by status of any one CU being in the red zone under the WSP and that the estimated relationship between aggregate abundances and probability of all CUs being above their lower benchmark holds. Logistic regression-based LRPs use only one metric of spawner abundances, and therefore do not use the best available information (Principle 2) when CUs statuses rely on other metrics, such as trends in data-limited contexts. Also, logistic regression-LRPs approximate CU status by comparing annual spawner abundances to benchmarks instead of generationally smoothed spawner abundances and so may capture noise in abundance trends instead of true status that is likely autocorrelated over time (see Holt et al. (in review) for more details). In some cases, status based on the single metric on spawner abundances may diverge with that based on multidimensional approaches, e.g., the Rapid Multidimensional Scanning Tool.
+Logistic regression-based LRPs are aligned with Principle 1 to the extent that serious harm is indicated by status of any one CU being in the red zone under the WSP and that the estimated relationship between aggregate abundances and probability of all CUs being above their lower benchmark holds. Logistic regression-based LRPs use only one metric of spawner abundances, and therefore do not use the best available information (Principle 2) when CUs statuses rely on other metrics, such as trends in data-limited contexts. Also, logistic regression-LRPs approximate CU status by comparing annual spawner abundances to benchmarks instead of generationally smoothed spawner abundances and so may capture noise in abundance trends instead of true status that is likely autocorrelated over time (see Holt et al. (in review) for more details). In some cases, status based on the single metric on spawner abundances may diverge with that based on multidimensional approaches, e.g., the Pacific Salmon Status Scanner.
 
 Logistic regression-based LRPs are operational (Principle 3) to some extent when harvest management occurs at the aggregate level and require aggregate-abundance based LRP to inform management decisions. However, they are more difficult to communicate being derived from model outputs, and they require the choice of probability of all CUs being above their lower benchmarks which is difficult to justify. <!--CH removed since it's mostly repeated in the next pgh: "Logistic-regression based LRPs may not be appropriate operationally if new management procedures are applied that result in changes in covariance among CUs. For fisheries without a history of weak-stock management the assumption of stationarity in covariance in exploitation may hold, as in Interior Fraser River Coho, supporting their application of logistic regression approaches to identify recovery targets."-->
 
