--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -6,13 +6,12 @@ output:
 ---
 # CASE STUDY 1: INTERIOR FRASER COHO SALMON{#IFCChapter}
 
-<!--TODO: change all reference of multidimensional tool to the Pacific Salmon Status Scanner and for short the Salmon Scanner-->
 
 ## CONTEXT
 
 The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hell’s Gate in the Fraser Canyon. Like most Coho Salmon, Interior Fraser Coho spend at least one full year in freshwater as fry before migrating to the ocean as smolts [@arbeiderInteriorFraserCoho2020]. Most (88%) Interior Fraser Coho have a 3-year life history, in which they leave freshwater in their second year and spend 18 months at sea prior to returning to their natal system to spawn. The remaining 12% have a 4-year life history in which they spend an additional year in freshwater before migrating as smolts in their third year. Both the 3-year and 4-year life histories spend 18 months at sea. Less than 1% of Interior Fraser Coho are believed to return as jacks (precocious mature males that spend only 6 months as sea) or at ages older than 4 years [@arbeiderInteriorFraserCoho2020].
 
-WSP CUs have been identified for Interior Fraser Coho based on genetics and geographic separation: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015; Figure \@ref(fig:coho-map)]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundance <!--BC:Is there a better way to say this? abundance above a threshold? Self-sustaining populations? --> in each of these smaller subpopulation units [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006; Table \@ref(tab:cohoCU2SP)]. The delineation of subpopulations was based on several factors, including the presence of natural barriers, the influence of large lakes on downstream discharge and thermal regimes, observations of spawner aggregations under differing discharge conditions, and genetic differentiation. The 11 subpopulations are described in detail by the @ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006. 
+WSP CUs have been identified for Interior Fraser Coho based on genetics and geographic separation: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015; Figure \@ref(fig:coho-map)]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundance above a 1000-spawner threshold in each of these smaller subpopulation units [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006; Table \@ref(tab:cohoCU2SP)]. The delineation of subpopulations was based on several factors, including the presence of natural barriers, the influence of large lakes on downstream discharge and thermal regimes, observations of spawner aggregations under differing discharge conditions, and genetic differentiation. The 11 subpopulations are described in detail by the @ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006. 
 
 
 ```{r coho-map, fig.cap="The five Conservation Units that make up the Interior Fraser Coho Stock Management Unit.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
@@ -448,9 +447,9 @@ knitr::include_graphics("figure/coho-StatusByNCUs-SPopAbundThreshST-50.png")
 
 ### Methods
 
-Forward projections of each of the five CUs with the Interior Fraser Coho SMU were done using the `samSim` modelling tool (Appendix \@ref(app:samsim-appendix)). Parameters characterizing population dynamics, marine survival rates, and exploitation rate were derived directly from data sets described in Section \@ref(cohoData). Base case parameters and alternative parameter values tested in sensitivity analyses are provided in Table \@ref(tab:coho-BaseProjectPars). Additional details on key model parameterizations and sensitivity analyses are also described in text below.  
+Forward projections of each of the five CUs with the Interior Fraser Coho SMU were done using the `samSim` modelling tool (Appendix \@ref(app:samsim-appendix)). Finer-scale projections at the scale of sub-populations were not possible as spawner-recruit data series were not available at this scale. As a result, projection-based LRPs using the IFCRT recovery target was not possible; we were restricted to looking at CU-level status estimates based on S~gen~. Parameters characterizing CU-level population dynamics, marine survival rates, and exploitation rates were derived directly from data sets described in Section \@ref(cohoData). Base case parameters and alternative parameter values tested in sensitivity analyses are provided in Table \@ref(tab:coho-BaseProjectPars). Additional details on key model parameterizations and sensitivity analyses are also described in text below.  
 
-Projection model outputs were used to estimate projection-based LRPs using the methods described on Section \@ref(projectedMethods). Forward projections were run for 30 years over 20,000 simulation trials.  The high number of simulation trials was required to stabilize LRP estimates given the binning of aggregate escapement in 200-fish intervals to identify LRPs based on probability thresholds.  We found that running projections over longer periods, such as 100 years, gave similar results as our 30 year time horizon.
+Projection model outputs were used to estimate projection-based LRPs using the methods described on Section \@ref(projectedMethods). Forward projections were run for 30 years over 20,000 simulation trials, with projections initialized using spawner abundances from the most recent four return years, 2016 - 2020.  The high number of simulation trials was required to stabilize LRP estimates given the binning of aggregate escapement in 200-fish intervals to identify LRPs based on probability thresholds.  We found that running projections over longer periods, such as 100 years, gave similar results as our 30 year time horizon.
 
 
 ***Stock recruitment dynamics***  
@@ -465,10 +464,7 @@ We parameterized correlations in recruitment residuals among CUs from MLE predic
 
 We initially attempted to reduce covariation in spawner abundances among CUs by scaling correlations in recruitment residuals (i.e., scalar < 1). However, we found that scalars had little effect on projected correlations in spawner abundances among CUs due to the shared marine rate coefficient dominating among-CU variability in recruitment. We therefore used sensitivity analyses of the level of variability in marine survival coefficients among CUs to drive patterns of covariation in spawner abundance, as described below. This approach differs from that taken for WCVI Chinook (Section \@ref(WCVIchinookChapter).  
 
-<!--BC Comment:
-In caption (which does not show up in word doc, you might consider stating what values represent (i.e., pairwise correlation coefficient)? 
-CW: need to check waht exactly the values are.
- -->
+
 ```{r coho-recruitResid-Ricker, fig.cap="Bubble plot of pairwise correlation coefficient in recruitment residuals among CUs from base Ricker model fit.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
 knitr::include_graphics("figure/coho-RecuitResidCorrelation-Ricker.png")
 ```
@@ -505,10 +501,7 @@ Exploitation rates for Interior Fraser Coho are only available at the SMU-level 
 
 
 <!--BC Comment:
-
-•  Consider stating years used to initialize abundances
-•  A extirpation threshold of 2 seems really low, is this consistent with other IFC coho simulations? 
-•  Consider clarifying that you did not model dynamics as sub-populations nested within CUs, since you introduce the sub-populations earlier. And perhaps include justification.
+•  A extirpation threshold of 2 seems really low, is this consistent with other IFC coho simulations? .
 -->
 
 \begin{longtable}[]{p{3.7cm} p{5cm} p{6.3cm}}
@@ -563,8 +556,6 @@ Extirpation threshold &  2 & Mating constraint \\
 ***LRP Estimates***
 
 Aggregate abundance-based LRPs estimated using the Ricker model as a basis for forward projections were lower than those obtained when the Ricker_priorCap model was used, regardless of which probability threshold was used to derive the LRP (Figure \@ref(fig:coho-projLRPCurveByOM); Table \@ref(tab:projectedLRPs2020)). This result is similar to the logistic regression-based LRPs, where LRPs derived using S\textsubscript{gen} estimates from the Ricker_priorCap model were higher due to higher S\textsubscript{gen} values.  The projected curve showing the probability of all CUs being above S\textsubscript{gen} was more gradual and further to the right for the Ricker_priorCap model compared to the base Ricker model (Figure \@ref(fig:coho-projLRPCurveByOM)). When projection outputs from both stock recruit model formulations were combined prior to binning in order to create a model-averaged scenario (with equal weight assigned to both scenarios), the resulting probability curve was mid-way between the curves from the two individual models. In all cases, projected curves had higher scatter with increasing aggregate abundance, such that LRP estimates at probability thresholds of p = 0.90 and p = 0.99 were unstable.
-
-<!--BC: Consider making the empirical LRP plots multi-panel like this one too. -->
 
 ```{r coho-projLRPCurveByOM, fig.cap="Probability of all CUs being above their lower benchmark of Sgen along a gradient in aggregate abundances within bins of 200 fish for two different stock recruit model options (Ricker and Ricker\\_priorCap) as well as a model averaged case (Combined) in which results from both stock recruit models were equally weighted. Results are derived from projections over 30 years and 20,000 MC Trials. Each dot is the proportion of MC trials where all CUs were > lower benchmarks. Candidate LRPs at p=0.5 (yellow) and p=0.66 (blue), 0.90 (green), and 0.99 (orange) are highlighted.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
 knitr::include_graphics("figure/coho-projLRPCurve-byOM.png")
@@ -657,32 +648,35 @@ knitr::include_graphics("figure/coho-statusPlot_withBars2020.png")
 ## DISCUSSION
 
 
-<!--BC: Consider starting discussion with a single paragraph that summarizes key take homes from this section. 
- This is a solid set of discussion points. Not sure if this is the right place but might also recap insights gleaned from exploration of multidimensional approach and its utility in this context? -->
+<!--BC: Not sure if this is the right place but might also recap insights gleaned from exploration of multidimensional approach and its utility in this context? -->
 
-<!--CW: I started translating the discussion points into paragraphs below -->
+The Interior Fraser Coho SMU is considered a data-rich SMU as it has full stock-recruits time series for all five CUs within the SMU, which allowed for the estimation of stock recuitment-based benchmarks (S\textsubscript{gen}). However, data time series were restricted to years after 1998, at which time spawner abundances were considered depressed compared to historic level. Despite the short time series, Interior Fraser Coho are well-suited for looking at the application of aggregate abundance-based LRPs due to the long history of using aggregate abundance-based recovery targets and fisheries reference points that were developed based on an underlying relationship between aggregate abundance and the distribution of abundance among sub-populations and CUs [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006, @kormanEvaluationFrameworkAssessing2019, @arbeiderInteriorFraserCoho2020]. While we were able to estimate aggregate abundance-based LRPs using a suite of CU-level benchmarks and LRP estimation methods (logistic- and projection-based), our results highlight the complexities in predicting how well aggregate abundance-based LRPs will do at tracking proportion-based LRPs as well as the sensitivity of the logistic regression-based approach of identifying aggregate abundance-based LRPs to data availability. 
 
-The Interior Fraser Coho SMU is considered a data-rich SMU as it has full stock-recruits time series for all five CUs within the SMU, which allowed for the estimation of abundance-based benchmarks (S\textsubscript{gen}). When considering the proportion-based LRPs, comparisons between single metric benchmark (S\textsubscript{gen}) and the Pacific Salmon Status Scanner yielded similar results. This occurs because the Pacific Salmon Status Scanner relies on S\textsubscript{gen} benchmarks when those are available. Exceptions occur if the estimated S\textsubscript{gen} are below the absolute threshold of 1500 spawners, as ocurred for the Frase Canyon CU. 
+Comparisons between the abundance-based methods and the proportional methods yielded mixed results. Status was generally consistent for the scenarios in which the Ricker_priorCap model was used, but diverged more for the Ricker and IFCRT methods, regardless of the approach used to estimate CU status. The proportion-based methods tend to get triggered more often in years 2000-2001 and 2015-2017, when abundance of individual CU's are low. Whereas the Aggregate abundance-based methods tend to get triggered ore often in years 2006-2007, the lowest aggregate abundance generational averages for the time-series. 
 
-This Interior Fraser Coho SMU has a long history of using aggregate abundance-based recovery targets and fisheries reference points <!-- include citation --> that were developed based on an underlying relationship between aggregate abundance and the distribution of abundance among sub-populations and CUs <!-- include citation -->. As a result, the Interior Frase Coho SMU was well suited to looking at the application of aggregate abundance-based LRPs, and comparing them to the preferred proportional approach.
+When considering proportion-based LRPs, comparisons between using a single metric benchmark to estimate CU status (i.e., S\textsubscript{gen}) and using the Pacific Salmon Status Scanner too to estimate CU status yielded similar results. This occured because the Salmon Scanner relies on S\textsubscript{gen} benchmarks when those are available. Exceptions occur if the estimated S\textsubscript{gen} are below the absolute threshold of 1500 spawners, as occurred for the Fraser Canyon CU. 
+
+Most methods evaluated for the Interior Fraser Coho case study relied on the evaluation of CU status relative to S\textsubscript{gen}. As a result, the method used to estimate S\textsubscript{gen} had a large impact on results. We used two different approaches for estimating S\textsubscript{gen}: a Ricker model ( base Ricker) and a ricker mode with an informative prior on S~REP~ (Ricker_priorCap). S\textsubscript{gen} estimates were higher for the Ricker_priorCap model compared to the base Ricker model, which meant that LRPs were more frequently triggered under this formulation. This pattern was observed for all four methods that relied on the Ricker_priorCap S\textsubscript{gen} estimates.
+
+We considered alternative Ricker models for Interior Fraser Coho  to represent different assumptions regarding productivity trends in the stock. This approach has also been used in previous analyses for this SMU. @arbeiderInteriorFraserCoho2020 used a model averaging approach with three SR models equally weighted when assessing recovery potential for the Interior Fraser Coho SMU (the base Ricker and Ricker_priorCap models we used, as well as a third depensatory mortality version that we did not consider). @kormanEvaluationFrameworkAssessing2019 also considered multiple Ricker model formulations when estimating reference points for the Interior Fraser Coho SMU; however, they opted to primarily present results for the base Ricker model instead of using model averaging approaches. 
+
+Implementation of LRPs when considerable uncertainty in underlying model structure exists will require methods to integrate estimates of LRP status over alternative model structures.  We demonstrate one approach when using projection-based estimates of aggregate abundance-based LRPs, in which we combine projections under each SR model scenario before calculating the LRP. This approach is basically a model averaging approach in which both scenarios are equally weighted.  However, other methods of assigning weights among model are possible. <!-- For example .... (TO DO: reference model selection / averaging papers from Carrie).  --> In other cases, such at the proportional approach using WSP assessments or the Pacific Salmon Status Scanner, uncertainty in model structure may require integration at earlier stages (i.e. when estimating biological benchmarks) or integration based on expert opinion.
+
+Retrospective analyses of logistic regression-based LRP options showed that LRPs were sensitive to data availability, with LRP estimates changing over time as more data became available. In addition, relatively small shifts in estimated S~gen~ over time meant that logistic models based on S~gen~ were sometimes unable to converge on a solution even with more data. This failure to converge was a result of a lack of overlap between aggregate abundance levels associated with 'successes' and 'failures', which is a requirement for logistic models. This limitation did not occur for the IFCRT logistic regression approach, in which the absolute threshold used to define CU status was constant over time.
+
+Missing data scenarios, in which 1 or 2 CUs were removed from the data set, further highlighted limitations in the ability of the logistic regression models to converge on a solution given small changes in the pattern of 'successes' and 'failures'. Estimates of aggregate SMU status, characterized as the ratio between the most recent generational mean escapement and the LRP, were also sensitive to the combination of CUs used. Removal of one or two influencial CUs often resulted in very different characterizations of CU status.  While our initial consideration of the representativeness of the 5 CUs within the Interior Fraser Coho SMU suggested that CUs could be used to infer status for missing CUs, our retrospective results for missing data scenarios do not support this approach.  Future work on this SMU (or, other SMUs wishing to apply these methods) could use retrospective analyses of proportion-based approaches to see if status estimates remain stable when 1 or 2 CUs are removed from the data set.
+
+Taken together, these retrospective results highlight that caution should be used when applying logistic regression-based LRPs. While they did provide similar estimates of SMU status as proportion-based methods for several (but not all) years in the historical comparison, they were sensitive to reductions in data availability. For the specific case of Interior Fraser Coho, retrospective performance may improve in the future as more data becomes available to improve the statistical power of logistic regression fits.
+
+Given that the estimation of logistic regression-based LRPs were sensitive to data availability, projection-based LRPs may provide more reliable estimates for cases in which population and fishery dynamics can be modelled.  Projection-based LRPs also have the advantage of being able to incorporate hypotheses about current population and / or fishery dynamics into forward projections, whereas logistic regression-based LRPs are constrained by conditions that have been previously experienced.
+
+The sensitivity of projection-based LRPs to exploitation rate means that these LRPs are specific to the management context.  In our Interior Fraser Coho projections, it made sense to set exploitation rates at the recent average as fishery restrictions since 1998 have maintained relatively stable harvest dynamics. In this case, the LRP represents the level of aggregate abundance that would be required to ensure all CUs were above Sgen given a specified fixed ER policy. If a decision was made to increase the exploitation rate, the LRP would also be increased accordingly to ensure that the underlying objective of all CUs above S~gen~ could be achieved. This pattern arises due to variability in productivity among CUs; when higher exploitation rates are applied, some low productivity CUs will require higher spawning abundances to ensure that they remain above Sgen. This effect is demonstrated in Appendix \@ref(app:ERsensitivity-appendix). As a result, projection-based LRPs are not static measures of serious harm, as commonly developed for other stocks/species.
+
+Projection-based LRPs were also sensitive to the level of co-variation in spawner abundances among CUs over time. Reductions in covariation resulted in increased LRP estimates. This pattern will result in more precautionary LRPs as the relationship between aggregate abundance and CU status weakens because projected LRPs will beed to be higher to help avoid the situation where weak CUs drop into red status.
 
 
-Our results highlight the complexities in predicting how well aggregate abundance-based LRPs will do at tracking proportion-based LRPs. Comparisons between the abundance-based methods and the proportional methods yielded mixed results. Status was generally consistent for the scenarios in which the Ricker_priorCap model was used, but diverged more for the Ricker and IFCRT methods. The proportion-based methods tend to get triggered more often in years 2000-2001 and 2015-2017, when abundance of individual CU's are low. Whereas the Aggregate abundance-based methods tend to get triggered ore often in years 2006-2007, the lowest aggregate abundance generational averages for the time-series. 
 
-
-Most methods evaluated for the Interior Frase Coho case study relied on the evaluation of CU status relative to S\textsubscript{gen}. As a result, the method used to estimate S\textsubscript{gen} had a large impact on results. We used two different approaches for estimating S\textsubscript{gen}: a Ricker model ( base Ricker) and a ricker mode with an informative prior on S~REP~ (Ricker_priorCap). S\textsubscript{gen} estimates were higher for the Ricker_priorCap model compared to the base Ricker model, which meant that LRPs were more frequently triggered under this formulation. This pattern was observed for all four methods that relied on the Ricker_priorCap S\textsubscript{gen} estimates.
-
- We considered alternative Ricker models for Interior Fraser Coho  to represent different assumptions regarding productivity trends in the stock. This approach has also been used in previous analyses for this SMU. @arbeiderInteriorFraserCoho2020 used a model averaging approach with three SR models equally weighted when assessing recovery potential for the Interior Fraser Coho SMU (the base Ricker and Ricker_priorCap models we used, as well as a third depensatory mortality version that we did not consider). @kormanEvaluationFrameworkAssessing2019 also considered multimple Ricker model formulations when estimating reference points for the Interior Fraser Coho SMU. They opted for choosing a preferred model, the base Ricker, instead of using model averaging approaches. 
-
-
-Implementation of LRPs when considerable uncertainty in underlying model structure exists will require methods to integrate estimates of LRP status over alternative model structures.  We demonstrate one approach when using projection-based estimates of aggregate abundance-based LRPs, in which we combine projections under each SR model scenario before calculating the LRP. This approach is basically a model averaging approach in which both scenarios are equally weighted.  However, other methods of assigning weights among model are possible. <!-- For example .... (TO DO: reference model selection / averaging papers from Carrie).  --> In other cases, such at the proportional approach using WSP assessments or the Pacific Salmon Status Scanner, uncertainty in model structure may require integration at earlier stages (i.e. when estimating biological benchmarks) or integration based on expert opinion.  For example, during the expert workshops that will be used to confirm Pacific Salmon Status Scanner status estimates, participants could be given two sets of status results based on two different Sgen models, and then be asked to converge on a single status estimate. <!--(can we pers. comm. Sue Grant as a reference for this process?). CW: I am not sure we want to give this example, I think it can be controversial and lead us on a off topic discussion --> 43
-
-
-
-
-(Still in rough note form)
-
- 
+<!--  
 
 Discussion topic 1: What are the unique characteristics of this case study that can inform the development of guidelines
 
@@ -694,7 +688,10 @@ Discussion topic 2: How well do aggregate abundance-based LRPs perform retrospec
 
 - The abundance-based methods we considered often matched the proportional methods in a historical comparison of SMU status relative to LRPs. For a given assumption about SR model structure, LRPs tended to be triggered in similar periods of times under the aggregate abundance-based and proportional options; however, there were some differences.
 
-- Our results highlight the complexities in predicting how well aggregate abundance-based LRPs will do at tracking proportion-based LRPs. <!--CW: this example is no longer true--> For example, when estimates of Sgen were obtained using the base Ricker model, proportion-based LRPs using Pacific Salmon Status Scanner status were more precautionary than the two aggregate abundance-based LRP options; especially in years 2015-2017. This result is partially a function of the different methods used to estimate CU status (rapid multidiensional scanning tool vs. single $S_{gen}$ metric) rather than the choice of proportion vs aggregate abundance approach. When aggregate abundance-based LRPs are compared to proportion-based LRPs using a single $S_{gen}$ metric, they are better aligned over this period. This result occurs because under thePacific Salmon Status Scanner, CUs can be above Sgen but still assessed as red status when their Sgen estimates are < 1500 spawners.
+- Our results highlight the complexities in predicting how well aggregate abundance-based LRPs will do at tracking proportion-based LRPs. <!--CW: this example is no longer true--> 
+
+<!-- 
+For example, when estimates of Sgen were obtained using the base Ricker model, proportion-based LRPs using Pacific Salmon Status Scanner status were more precautionary than the two aggregate abundance-based LRP options; especially in years 2015-2017. This result is partially a function of the different methods used to estimate CU status (rapid multidiensional scanning tool vs. single $S_{gen}$ metric) rather than the choice of proportion vs aggregate abundance approach. When aggregate abundance-based LRPs are compared to proportion-based LRPs using a single $S_{gen}$ metric, they are better aligned over this period. This result occurs because under thePacific Salmon Status Scanner, CUs can be above Sgen but still assessed as red status when their Sgen estimates are < 1500 spawners.
 
 - In comparison, when estimates of Sgen were obtained using the Ricker_priorCap model, which produced higher Sgen and LRP estimates than the Ricker model, both types of proportion-based LRPs were less precautionary than aggregate abundance-based LRPs. This result was especially pronounced when aggregate abundance-based LRPs were estimated using the projection-based LRP approach. LRP breaches using the Pacific Salmon Status Scanner with Ricker-priorCap estimates in earlier years (i.e., before 2015) were based CU abundance relative to $S_{gen}$, meaning that the two proportional methods were aligned. There were however additional years in which aggregate abundance LRPs were triggered but neither proportional LRP was. This pattern occurred when aggregate abundance dropped below abundance-based LRPs, but all CUs remained above red status based on CU-level abundances all being greater than $S_{gen}$. While this pattern occurred for both types of $S_{gen}$ estimates (Ricker and Ricker-priorCap), it was more common for the Ricker-priorCap model. 
 
@@ -704,6 +701,7 @@ KH (Nov 9): Is it ok to take out the following point since we have now explored 
 <!--CH: One challenge in applying statuses based on the Multidimenstional Tool to development of aggregate-abundance based LRPs is that the component metrics in the Tool includes short and long-term trends which are independent of aggregate status. This misalignment of underlying metrics will increase uncertainty in aggregate-abundance based LRPs developed from Multidimensional status, and may not be suitable-->
 
 
+<!-- 
 Discussion topic 3: Importance of SR model choice in characterizing SMU status in all approaches.
 
 - All methods (with the exception of IFCRT) relied heavily on assessment of CU status relative to Sgen.  This is even true for the Prop methods using the rapid mutlidimensional scanning tool because the decision tree relies heavily on estimates of Sgen when available, which they are for Interior Fraser Coho.
@@ -714,11 +712,19 @@ Discussion topic 3: Importance of SR model choice in characterizing SMU status i
 
 Discussion topic 4: What was learned from retrospective analysis of logistic regression-based methods?
 
-- Retrospective analyses of logistic regression-based LRP options showed that LRPs were sensitive to data availability. 2015 was the first year that that regression-based LRPs could be estimated, <!--CH remind me why. Is it b/c model didn't converge with shorter time series, or we said that a min # of yrs was required for SR analyses...  And if model model convergence was the problem was this because there were no years of failures, no overlap between successes and failures ,or something else?-->indicating that at least 18 years of data were required. (Although, note that the Logistic regression with the Base Ricker model could not estimate an LRP until 2017, so required 20 years of data).  However, slight shifts in Sgen estimates in some years meant that logistic models were sometimes unable to converge on a solution even with more data. 
+- Retrospective analyses of logistic regression-based LRP options showed that LRPs were sensitive to data availability. 2015 was the first year that that regression-based LRPs could be estimated, <!--CH remind me why. Is it b/c model didn't converge with shorter time series, or we said that a min # of yrs was required for SR analyses...  And if model model convergence was the problem was this because there were no years of failures, no overlap between successes and failures ,or something else?-->
+
+<!--
+
+indicating that at least 18 years of data were required. (Although, note that the Logistic regression with the Base Ricker model could not estimate an LRP until 2017, so required 20 years of data).  However, slight shifts in Sgen estimates in some years meant that logistic models were sometimes unable to converge on a solution even with more data. 
 - For years in which LRPs could be estimated, LRP estimates did vary over time; especially when Sgen was estimated each year within an integrated modelling framework.  LRP estimates were more stable when CU status was based on the IFCRT recovery target of at least half of all sub-populations within a CU having more than 1000 fish.  This result is likely because CU-level SR parameters and lower benchmarks in a given historic year were not changing annually in the same way the did in the integrated Sgen-logistic regression model fits.
 - Missing data scenarios, in which 1 or 2 CUs were removed from the data set, highlighted limitations in the ability of the logistic regression models to converge on a solution given small changes in the pattern of 'successes' and 'failures' in the data used as inputs to the logistic regression. Estimates of aggregate SMU status, characterized as generational mean escapement / LRP, were also sensitive to the combination of CUs used. Removal of one or two influencial CUs often resulted in very different characterizations of CU status.<!--CH: see my comments on the Results section for this about possible generalizations--> <!--CH comment: Key point: when we remove CUs, status tends to be optimistic compared when all CUs are included-->
+
+<!-- 
 - Taken together, these retrospective results highlight that caution should be used when applying logistic regression-based LRPs. While they did provide similar estimates of SMU status as proportion-based methods using the rapid multidimesional scanning tool for several (but not all) years in the historical comparison, they were sensitive to reductions in data availability. For the specific case of Interior Fraser Coho, retrospective performance may improve in the future as more data becomes available to improve the statistical power of logistic regression fits.
 <!--CH: I suggest adding mention of if these CUs fit the criteria for representativeness from Guildeslines paper-->
+
+<!--
 
 Discussion topic 5: What we learned from sensitivity analysis of projection-based methods?
 
@@ -728,3 +734,5 @@ Discussion topic 5: What we learned from sensitivity analysis of projection-base
 - Projection-based LRPs were also sensitive to the level of co-variation in spawner abundances among CUs over time. Reductions in covariation resulted in increased LRP estimates. This pattern will result in more precautionary LRPs as the relationship between aggregate abundance and CU status weakens. Projected LRPs therefore have a built-in buffer that will help avoid the situation where aggregate abundance remains above the LRP despite several CUs having poor realized status.<!--CH comment: I'm a bit cautious about using the word "buffer" here. If this phenomenon relates to weakening of the actual underlying covariation in abundances then yes, the LRP will increase but there won't be a buffer between it and a 'true' value. It's just that the aggregrate abundances need to be higher to have all CUs > red zone. I suggest changing this sentence to, "Projected LRPs therefore be higher to help avoid the situation where weak CUs drop into red status."  Status from agg-abund LRPs should still be the same as status from the p ppn method under low covariation, i.e., no buffer.-->
 
 <!--CH: I think projection-based LRPs are also sensitivity to differences in size/capacity of component CUs. I guess this is shown somewhat in the Appendix on sens to ER, where I kept SREP constant or varying. If it comes up in the review we can point participants there-->
+
+
